# SnakeCpp

./: CMakeLists.txt  Readme.md
.github/workflows/: linux.yml  macos.yml  windows.yml
src/: main.cpp
src/config/: config.hpp
src/models/board/: board.cpp  board.hpp
src/models/direction/: direction.cpp  direction.hpp
src/models/game/: game.cpp  game.hpp
src/models/point/: point.hpp
src/models/snake/: snake.cpp  snake.hpp
src/services/file_service/: file_service.cpp  file_service.hpp
src/services/game_service/: game_service.cpp  game_service.hpp
src/services/menu_service/: menu_service.cpp  menu_service.hpp
src/utility/: utility.cpp  utility.hpp
